--- a/secureshield/package.json
+++ b/secureshield/package.json
@@ -4,7 +4,8 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "dev:all": "concurrently \"php artisan serve\" \"npm run dev\" --names \"Laravel,Vite\" --prefix-colors \"blue,green\""
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
